--- a/MasterAngler/View/MenuPanelView.xaml
+++ b/MasterAngler/View/MenuPanelView.xaml
@@ -8,7 +8,7 @@
         DataContext="{Binding MenuPanel, Source={StaticResource Locator}}">
 
     <Grid>
-        <ListBox Background="Aqua" SelectedValue="{Binding SelectedItem}" SelectedValuePath="Content" SelectedIndex="0" >
+        <ListBox SelectedValue="{Binding SelectedItem}" SelectedValuePath="Content" SelectedIndex="0" >
             <ListBoxItem Content="Statistics"/>
             <ListBoxItem Content="Hotkeys"/>
             <ListBoxItem Content="Options"/>
